--- a/term-project/week6-ntier/.gitignore
+++ b/term-project/week6-ntier/.gitignore
@@ -1,1 +1,32 @@
-/node_modules
+# Dependencies
+node_modules/
+
+# Environment
+.env
+
+# Database
+*.db
+*.sqlite
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# SSL Certificates (don't commit these!)
+*.key
+*.crt
+*.pem
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# PM2
+.pm2/
+
+.vagrant/
