--- a/term-project/week6-ntier/Vagrantfile
+++ b/term-project/week6-ntier/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/jammy64" # Ubuntu 22.04 LTS
+config.vm.box = "ubuntu/server-jammy64" #ubuntu/server-24.04
 
   # ====== กำหนดชื่อผู้ใช้และรหัสผ่าน ======
   USERNAME = "panuwat"
